FIX - corrected injected filename

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -38,7 +38,7 @@
         "js/jquery/jquery.min.js",
         "js/easyModal/jquery.easyModal.js",
         "src/inject/requests.js",
-        "src/inject/inject.js"
+        "src/inject/issues_list.js"
       ]
     }
   ],
